[package]
name = "maxi-auction"
version = "0.1.2"
description = "Maxi Meme Yo!"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "maxi_auction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-panic = []
custom-heap = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = ["raydium-amm-cpi/devnet"]

[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.30.1", features = [
  "associated_token",
  "token",
  "metadata",
] }
raydium-amm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-amm-cpi", branch = "anchor-0.30.1" }
